tests/baselines/reference/numericIndexerTyping2.errors.txt
numericIndexerTyping2.ts(9,5): error TS2322: Type 'Date' is not assignable to type 'string'.
numericIndexerTyping2.ts(12,5): error TS2322: Type 'Date' is not assignable to type 'string'.


==== numericIndexerTyping2.ts (2 errors) ====
    class I {
        [x: string]: Date
    }
    
    class I2 extends I {
    }
    
    var i: I;
    var r: string = i[1]; // error: numeric indexer returns the type of the string indexer
        ~
!!! error TS2322: Type 'Date' is not assignable to type 'string'.
    
    var i2: I2;
    var r2: string = i2[1]; // error: numeric indexer returns the type of the string indexere
        ~~
!!! error TS2322: Type 'Date' is not assignable to type 'string'.